--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
             </div>
         </div>
         <div class="row mt-2">
-            <div class=" col-3 col-md-12 col-sd-12">
+            <div class="col-md-12 col-sd-12">
                 <div class="card" style="width: 18rem;">
                     <img src="images/nature.jpg" class="card-img-top" alt="...">
                     <div class="card-body">
@@ -91,7 +91,7 @@
                     </div>
                   </div>
             </div>
-            <div class="col-3 cols-md-12 col-sd-12">
+            <div class="col-md-12 col-sd-12">
                 <div class="card" style="width: 18rem;">
                     <img src="images/nature2.jpg" class="card-img-top" alt="...">
                     <div class="card-body">
@@ -101,7 +101,7 @@
                     </div>
                   </div>
             </div>
-            <div class="col-3 cols-md-12 col-sd-12">
+            <div class="col-md-12 col-sd-12">
                 <div class="card" style="width: 18rem;">
                     <img src="images/nature3.jpg" class="card-img-top" alt="...">
                     <div class="card-body">
