--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
                     </div>
                   </div>
             </div>
-            <div class="col-3 cols-md-3 col-sd-12">
+            <div class="col-md-3 col-sd-12">
                 <div class="card" style="width: 18rem;">
                     <img src="images/nature.jpg" class="card-img-top" alt="...">
                     <div class="card-body">
