--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
             </div>
         </div>
         <div class="row">
-            <div class="col-12">
+            <div class="col-md-12 col-sm-12">
                 <div id="carouselExampleIndicators" class="carousel slide" data-bs-ride="true">
                     <div class="carousel-indicators">
                       <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
@@ -81,7 +81,7 @@
             </div>
         </div>
         <div class="row mt-2">
-            <div class="col-3 cols-md-3 col-sd-12">
+            <div class="col-md-12 col-sd-12">
                 <div class="card" style="width: 18rem;">
                     <img src="images/nature.jpg" class="card-img-top" alt="...">
                     <div class="card-body">
@@ -91,7 +91,7 @@
                     </div>
                   </div>
             </div>
-            <div class="col-3 cols-md-3 col-sd-12">
+            <div class="col-md-12 col-sd-12">
                 <div class="card" style="width: 18rem;">
                     <img src="images/nature2.jpg" class="card-img-top" alt="...">
                     <div class="card-body">
@@ -101,7 +101,7 @@
                     </div>
                   </div>
             </div>
-            <div class="col-3 cols-md-3 col-sd-12">
+            <div class="cols-md-12 col-sd-12">
                 <div class="card" style="width: 18rem;">
                     <img src="images/nature3.jpg" class="card-img-top" alt="...">
                     <div class="card-body">
@@ -111,7 +111,7 @@
                     </div>
                   </div>
             </div>
-            <div class="col-3 cols-md-3 col-sd-12">
+            <div class="cols-md-12 col-sd-12">
                 <div class="card" style="width: 18rem;">
                     <img src="images/nature.jpg" class="card-img-top" alt="...">
                     <div class="card-body">
